--- a/frontend/src/components/FoodDisplay/FoodDisplay.css
+++ b/frontend/src/components/FoodDisplay/FoodDisplay.css
@@ -20,5 +20,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 20vh; /* Adjust the height as needed */
+    height: 20vh; 
   }
